--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@ body{
   font-family: 'Roboto', sans-serif;
   color: white;
   overflow-x: hidden;
-  background-color: #000A2B;
+  background: #292929;
 }
 body > *{
   -webkit-tap-highlight-color: transparent;
